--- a/AnimeGo/Info.plist
+++ b/AnimeGo/Info.plist
@@ -17,9 +17,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2</string>
+	<string>1.3</string>
 	<key>CFBundleVersion</key>
-	<string>7</string>
+	<string>1</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>bilibili</string>
@@ -28,6 +28,7 @@
 		<string>youkuhd</string>
 		<string>letvclient</string>
 		<string>iPadLetvClient</string>
+		<string>pptv</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
